# 6-disc-changer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  claude.md  fly.toml
.github/workflows/: aws-infrastructure.yml
docs/: 2025-06-01-01-configure-github-actions-aws-permissions.md  2025-06-01-02-fly-io-oidc-setup.md  2025-06-01-03-local-development-fallbacks.md  2025-06-01-04-aws-infrastructure-setup-access-patterns.md
migrations/: 20250526_create_users_table.sql
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  main.yaml
pulumi/sdks/aws/: aws-6.81.0.yaml
scripts/: setup-github-oidc.sh
src/: config.rs  db.rs  main.rs
src/database/: backup.rs  backup_naming.rs  mod.rs
src/database/storage/: local_storage.rs  mod.rs  s3_storage.rs
tasks/: 000-create-prd.md  010-generate-tasks.md  020-process-task-list.md  2025-05-30-01-prd-sqlite-backup-restore-tasks.md  2025-05-30-01-prd-sqlite-backup-restore.md
templates/: about.html  base.html  index.html  user_list.html  user_list_item.html  users.html
