[package]
name = "six-disc-changer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
minijinja = { version = "2.10.2", features = ["loader"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
futures = "0.3.28"
# AWS SDK dependencies
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-credential-types = "0.55.3"
aws-types = "0.55.3"
tracing = "0.1.37"
# SQLite dependencies
tempfile = "3.5.0"
rand = "0.8.5"

[dev-dependencies]
mockall = "0.11.4"
